--- a/package.json
+++ b/package.json
@@ -22,5 +22,19 @@
   "bugs": {
     "url": "https://github.com/Franckyroquai/backend-VV-quotes/issues"
   },
-  "homepage": "https://github.com/Franckyroquai/backend-VV-quotes#readme"
+  "homepage": "https://github.com/Franckyroquai/backend-VV-quotes#readme",
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.2",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
+  }
 }
