--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
+    "mongoose-simple-random": "^0.4.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
