--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
     "env": {
-        "browser": true,
+        "node": true,
         "commonjs": true,
         "es2021": true
     },
@@ -12,7 +12,7 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "no-unused-vars":"off",
+        "no-unused-vars":"off",//TODO: remove before prod
         "no-console":"warn",
         "prettier/prettier":[
             "warn",
