--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --fix .",
     "dev": "./node_modules/nodemon/bin/nodemon.js server.js",
     "prod": "node server.js"
   },
