MIN: lint rules && server.js > corrected rules for console and refactored server.js accordingly

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
   },
   "rules": {
     "no-unused-vars": "off", //TODO: remove before prod
-    "no-console": "warn",
+    "no-console": ["warn", {"allow": ["warn", "error", "info"]}],
     "comma-dangle": ["error", {
         "arrays": "always-multiline",
         "objects": "only-multiline"
