--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "auth",
     "quote"
   ],
-  "author": "Franck Monge",
+  "authors": ["Franck Monge", "Pierre POMET"],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Franckyroquai/backend-VV-quotes/issues"
@@ -35,18 +35,17 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "tracer": "^1.1.5"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
+    "express-jwt": "^6.1.1",
+    "express-jwt-permissions": "^1.3.6",
     "mongoose": "^6.2.2",
-    "mongoose-simple-random": "^0.4.1",
-    "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "mongoose-simple-random": "^0.4.1"
   }
 }
