--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint --fix .",
-    "dev": "./node_modules/nodemon/bin/nodemon.js server.js",
+    "dev": "npx nodemon server.js",
     "prod": "node server.js"
   },
   "repository": {
