--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "auth",
     "quote"
   ],
-  "authors": ["Franck Monge", "Pierre POMET"],
+  "authors": [
+    "Franck Monge",
+    "Pierre POMET"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Franckyroquai/backend-VV-quotes/issues"
@@ -46,6 +49,8 @@
     "express-jwt": "^6.1.1",
     "express-jwt-permissions": "^1.3.6",
     "mongoose": "^6.2.2",
-    "mongoose-simple-random": "^0.4.1"
+    "mongoose-simple-random": "^0.4.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.19.0"
   }
 }
