--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,10 @@ DBUSER=
 DBPASS=
 DBNAME=
 
+DB_SYNC_TYPE=
+
 USER_MAILS=
-REGENERATEPASSWORD=
+REGENERATE_PASSWORDS=
+DEFAULT_REGEN_PASSWORD=
+
+ROLES=
