--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "express-list-endpoints": "^6.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "tracer": "^1.1.5"
