--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "quote"
   ],
   "authors": [
-    "Franck Monge",
-    "Pierre POMET"
+    "Franck Monge"
   ],
   "license": "ISC",
   "bugs": {
