--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,7 @@
             "port": 25060,
             "driver": "MySQL",
             "name": "Francky",
-            "database": "pepodb",
+            "database": "devdb",
             "username": "doadmin",
             "password": "AVNS_nQAez3CXSRQG1GZSUBx"
         }
